ensure grid doesn't break out of container

--- a/scss/core/objects/_grids.scss
+++ b/scss/core/objects/_grids.scss
@@ -42,6 +42,7 @@
 	@include px-and-rem(margin-left, -$base-spacing-unit);
 	list-style: none;
 	margin-bottom: 0;
+	max-width: 100%;
 
 	@if $use-flexbox-grid { @include display(flex);}
 }
